--- a/static/index.html
+++ b/static/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>AI Chat Assistant | Clean, Minimal AI Interface</title>
+	<title>Minima |  Clean, Minimal Free HTML5 template</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="pixelhint.com">
-	<meta name="description" content="AI Chat Assistant - Powered by advanced language models with clean, minimal interface"/>
+	<meta name="description" content="Minima is a minimal, clean HTML5 multi-purpose template, well-coded & commented code"/>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<link rel="stylesheet" href="/static/css/style.css">
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
 
 	<header>
+
 		<div class="wrapper">
-			<a href="#" class="logo"> <img src="img/logo.png" alt="" title="AI Chat Assistant"/> </a>
+			<a href="#" class="logo"> <img src="img/logo.png" alt="" title="Minima"/> </a>
 			<nav>
 				<ul>
 					<li><a href="">Services</a></li>
@@ -27,83 +26,56 @@
 				</ul>
 			</nav>
 		</div>
+		
 	</header><!-- End Header -->
 
 	<section class="billboard">
 		<section class="caption">
-			<p class="cap_title">🤖 AI Chat Assistant</p>
-			<p class="cap_desc">Powered by advanced language models</p>
-			<a href="#chat-section">Start Chatting <i></i></a>
+			<p class="cap_title">Minima Clean & Minimal Template</p>
+			<p class="cap_desc">excepteur sint occaecat cupidatat non proident</p>
+			<a href="#">Start here <i></i></a>
 		</section>
 	</section><!-- End billboard -->
-
-	<div class="container">
-		<div class="header">
-			<h1>🤖 AI Chat Assistant</h1>
-			<p>Powered by advanced language models</p>
-		</div>
-		
-		<div class="chat-container" id="chat-section">
-			<div class="chat-messages" id="chatMessages">
-				<div class="message ai-message">
-					<strong>AI Assistant:</strong> Hello! I'm here to help you with any questions or tasks. What would you like to know?
-				</div>
-			</div>
-			
-			<div class="loading" id="loading">AI is thinking...</div>
-			
-			<div class="input-group">
-				<input 
-					type="text" 
-					class="message-input" 
-					id="messageInput" 
-					placeholder="Type your message here..."
-					onkeypress="handleKeyPress(event)"
-				>
-				<button class="send-btn" onclick="sendMessage()" id="sendBtn">
-					Send
-				</button>
-			</div>
-		</div>
-	</div>
 
 	<section class="services wrapper">
 		<ul>
 			<li>
 				<img class="s_icons" src="img/s1_icon.png" title="" alt=""/>
-				<h3>💡 Smart Responses</h3>
-				<p>Get intelligent answers powered by state-of-the-art AI technology for all your questions and tasks.</p>		
+				<h3>Duis aute irure</h3>
+				<p>Excepteur sint occaecat cupi datat non it proident, sunt in culpa qui officia dese runtorn mollit anim id est laborum.</p>		
 			</li>
 			<li>
 				<img class="s_icons" src="img/s2_icon.png" title="" alt=""/>
-				<h3>⚡ Fast Processing</h3>
-				<p>Quick response times for seamless conversation experience with advanced natural language processing.</p>		
+				<h3>Duis aute irure</h3>
+				<p>Excepteur sint occaecat cupi datat non it proident, sunt in culpa qui officia dese runtorn mollit anim id est laborum.</p>		
 			</li>
 			<li>
 				<img class="s_icons" src="img/s3_icon.png" title="" alt=""/>
-				<h3>🔒 Secure</h3>
-				<p>Your conversations are processed securely with enterprise-grade security and privacy protection.</p>		
+				<h3>Duis aute irure</h3>
+				<p>Excepteur sint occaecat cupi datat non it proident, sunt in culpa qui officia dese runtorn mollit anim id est laborum.</p>		
 			</li>
 		</ul>
 	</section><!-- End services -->
 
+
 	<section class="video wrapper">
-		<h3>Experience the power of AI conversation</h3>
-		<p>Our AI assistant provides intelligent responses and helps you accomplish tasks efficiently through natural conversation.</p>
+		<h3>sunt in culpa qui officia deserunt mollit</h3>
+		<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		<div class="ex_video">
 			<a href="#"><img src="img/video.jpg" alt="" title=""/></a>
 		</div>
 	</section>	<!-- End video -->
 
+
 	<section class="recent_work wrapper">
-		<h3 class="S_title">AI Features</h3>
+		<h3 class="S_title">Recent Work</h3>
 
 		<div class="work">
 			<a href="#" class="work_img">
 				<img src="img/work_image.jpg" alt="" title=""/>
 			</a>
 			<a href="#" class="work_title">
-				Natural Language Processing
+				Brand Project
 				<i></i>
 			</a>
 		</div>
@@ -112,7 +84,7 @@
 				<img src="img/work_image.jpg" alt="" title=""/>
 			</a>
 			<a href="#" class="work_title">
-				Intelligent Responses
+				Brand Project 2
 				<i></i>
 			</a>
 		</div>
@@ -121,7 +93,7 @@
 				<img src="img/work_image.jpg" alt="" title=""/>
 			</a>
 			<a href="#" class="work_title">
-				Multi-topic Support
+				Brand Project 3
 				<i></i>
 			</a>
 		</div>
@@ -130,34 +102,23 @@
 				<img src="img/work_image.jpg" alt="" title=""/>
 			</a>
 			<a href="#" class="work_title">
-				Real-time Chat
+				Brand Project 4
 				<i></i>
 			</a>
 		</div>
 	</section><!-- End recent_work -->
 
-	<div class="features">
-		<div class="feature">
-			<h3>💡 Smart Responses</h3>
-			<p>Get intelligent answers powered by state-of-the-art AI</p>
-		</div>
-		<div class="feature">
-			<h3>⚡ Fast Processing</h3>
-			<p>Quick response times for seamless conversation</p>
-		</div>
-		<div class="feature">
-			<h3>🔒 Secure</h3>
-			<p>Your conversations are processed securely</p>
-		</div>
-	</div>
+
 
 	<section class="subscription">
 		<div class="wrapper">
-			<p class="title">Try our AI assistant today.</p>
-			<p class="desc">Join thousands of users experiencing the power of AI-powered conversations.</p>
-			<a href="#chat-section" class="start_btn">Start Chatting Now</a>
+			<p class="title">join our subscribers.</p>
+			<p class="desc">10 000 sint occaecat cupidatat non proident sunt in culpa qui officia.</p>
+			<a href="#" class="start_btn">Click here to subscribe</a>
 		</div>
 	</section><!-- End subscription -->
+
+
 
 	<section class="social">
 			<a href="http://facebook.com/pixelhint" target="_blank" class="fb"></a>
@@ -165,6 +126,8 @@
 			<a href="http://dribbble.com/pixelhint" target="_blank" class="d"></a>
 			<a href="#" target="_blank" class="g"></a>
 	</section><!-- End social -->
+
+
 
 	<footer>
 		<div class="wrapper">
@@ -175,12 +138,12 @@
 			</div>	
 
 			<div class="f_cols">
-				<h3>AI Features</h3>
+				<h3>Company</h3>
 				<ul>
-					<li><a href="#">Smart Responses</a></li>
-					<li><a href="#">Fast Processing</a></li>
-					<li><a href="#">Security</a></li>
-					<li><a href="#">API Access</a></li>
+					<li><a href="#">Our Story</a></li>
+					<li><a href="#">Mission</a></li>
+					<li><a href="#">Journal</a></li>
+					<li><a href="#">Careers</a></li>
 				</ul>	
 			</div>	
 
@@ -194,10 +157,12 @@
 			</div>	
 
 			<div class="f_cols">
-				<h3>AI Assistant.</h3>
-				<p>Powered by advanced language models for intelligent conversation.</p>
+				<h3>Minima.</h3>
+				<p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 				<p>Template made by <a href="http://pixelhint.com" target="_blank">pixelhint.com</a></p>
 			</div>	
+
+
 		</div>
 	</footer><!-- End footer -->
 
@@ -210,7 +175,4 @@
 			<input type="submit" id="submit" value="Subscribe Now"/>
 		</form>
 	</div>
-
-	<script src="/static/js/app.js"></script>
 </body>
-</html>
